fix: scrollbar color

--- a/packages/note/src/tailwind.css
+++ b/packages/note/src/tailwind.css
@@ -273,6 +273,14 @@ body {
   --animate-fade-in-sm: fade-in-sm 300ms cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
+*::-webkit-scrollbar {
+  background-color: var(--color-base-200) !important;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--color-base-content-subtle-100) !important;
+}
+
 @keyframes fade-in {
   from {
     opacity: 0;
